--- a/portfolio.html
+++ b/portfolio.html
@@ -2143,7 +2143,7 @@ hover:-translate-y-2 group cursor-pointer transform hover:-translate-y-2 hover:s
             body.classList.toggle("dark");
 
             if (body.classList.contains("dark")) {
-                logo.src = "logoDark.svg";
+                logo.src = "logodark.svg";
                 localStorage.setItem("theme", "dark");
                 // In dark mode, show moon icon (to switch back to light)
                 moon.classList.remove("hidden");
@@ -2249,5 +2249,6 @@ hover:-translate-y-2 group cursor-pointer transform hover:-translate-y-2 hover:s
     </script>
 
 </body>
+
 
 </html>
