--- a/portfolio.html
+++ b/portfolio.html
@@ -1819,20 +1819,20 @@ hover:-translate-y-2 group cursor-pointer transform hover:-translate-y-2 hover:s
                 <!-- Technologies Used -->
                 <div class="mt-4 flex justify-center flex-wrap items-center gap-4">
                     <span
-                        class="inline-block px-3 py-1 bg-gray-200 text-gray-800 rounded-full text-sm font-semibold">HTML</span>
+                        class="inline-block px-3 py-1 bg-gray-200 text-gray-800 rounded-full text-sm font-semibold">Spring-boot</span>
                     <span
-                        class="inline-block px-3 py-1 bg-gray-200 text-gray-800 rounded-full text-sm font-semibold">CSS</span>
+                        class="inline-block px-3 py-1 bg-gray-200 text-gray-800 rounded-full text-sm font-semibold">Java</span>
                     <span
-                        class="inline-block px-3 py-1 bg-gray-200 text-gray-800 rounded-full text-sm font-semibold">JavaScript</span>
+                        class="inline-block px-3 py-1 bg-gray-200 text-gray-800 rounded-full text-sm font-semibold">TypeScript</span>
                     <span
                         class="inline-block px-3 py-1 bg-gray-200 text-gray-800 rounded-full text-sm font-semibold">Tailwind</span>
                     <span
                         class="inline-block px-3 py-1 bg-gray-200 text-gray-800 rounded-full text-sm font-semibold">dark
                         Mode </span>
                     <span
-                        class="inline-block px-3 py-1 bg-gray-200 text-gray-800 rounded-full text-sm font-semibold">React</span>
+                        class="inline-block px-3 py-1 bg-gray-200 text-gray-800 rounded-full text-sm font-semibold">Vue.js</span>
                     <span
-                        class="inline-block px-3 py-1 bg-gray-200 text-gray-800 rounded-full text-sm font-semibold">TypeScript</span>
+                        class="inline-block px-3 py-1 bg-gray-200 text-gray-800 rounded-full text-sm font-semibold">API</span>
 
                 </div>
 
@@ -2252,3 +2252,4 @@ hover:-translate-y-2 group cursor-pointer transform hover:-translate-y-2 hover:s
 
 
 </html>
+
